@@ -32,6 +32,8 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Function;
 import java.util.stream.Stream;
 
+import io.crate.execution.ddl.tables.AddColumnResponse;
+import org.elasticsearch.action.support.master.AcknowledgedResponse;
 import org.jetbrains.annotations.Nullable;
 
 import org.apache.lucene.document.FieldType;
@@ -174,7 +176,7 @@ public class TransportShardUpsertAction extends TransportShardAction<ShardUpsert
             assert request.insertColumns() == null || insertColumns.subList(0, request.insertColumns().length).equals(Arrays.asList(request.insertColumns()))
                 : "updateToInsert.columns() must be a superset of insertColumns where the start is an exact overlap. It may only add new columns at the end";
         } else {
-            insertColumns = List.of(request.insertColumns());
+            insertColumns = Arrays.asList(request.insertColumns());
         }
         Indexer indexer = new Indexer(
             indexName,
@@ -183,7 +185,8 @@ public class TransportShardUpsertAction extends TransportShardAction<ShardUpsert
             nodeCtx,
             getFieldType,
             insertColumns,
-            request.returnValues()
+            request.returnValues(),
+            clusterService.state().nodes().getMinNodeVersion()
         );
         if (indexer.hasUndeterministicSynthetics()) {
             request.insertColumns(indexer.insertColumns(insertColumns));
@@ -363,7 +366,8 @@ public class TransportShardUpsertAction extends TransportShardAction<ShardUpsert
             nodeCtx,
             getFieldType,
             targetColumns,
-            null
+            null,
+            clusterService.state().nodes().getMinNodeVersion()
         );
         for (ShardUpsertRequest.Item item : request.items()) {
             if (item.seqNo() == SequenceNumbers.SKIP_ON_REPLICA) {
@@ -522,6 +526,7 @@ public class TransportShardUpsertAction extends TransportShardAction<ShardUpsert
         final long startTime = System.nanoTime();
 
         List<Reference> newColumns = indexer.collectSchemaUpdates(item);
+        AcknowledgedResponse response = null;
         if (!newColumns.isEmpty()) {
             var addColumnRequest = new AddColumnRequest(
                 RelationName.fromIndexName(indexShard.shardId().getIndexName()),
@@ -529,7 +534,12 @@ public class TransportShardUpsertAction extends TransportShardAction<ShardUpsert
                 Map.of(),
                 new IntArrayList(0)
             );
-            addColumnAction.execute(addColumnRequest).get();
+            response = addColumnAction.execute(addColumnRequest).get();
+        }
+
+        if (response != null && indexer.targetsHaveOids()) {
+            AddColumnResponse addColumnResponse = (AddColumnResponse) response;
+            indexer.updateTargets(addColumnResponse.addedColumns());
         }
 
         ParsedDocument parsedDoc = indexer.index(item);
